# LlamaBot

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  LISEZMOI.md  README.md  build_android_cpu.sh  build_android_gpu_vk.sh  build_native_cpu_only.sh  build_native_gpu_cuda.sh  build_native_test_coverage.sh
Docs/: DOCUMENTATION_GUIDE.md  DoxyLayout.xml  README_DOC.md  architecture.dox  examples.md  mainpage.dox
Source/Application/: Application.cpp  Application.h  ApplicationServices.cpp  ApplicationServices.h  CMakeLists.txt  Chat.cpp  Chat.h  ChatBotPanel.cpp  ChatBotPanel.h  ChatController.cpp  ChatController.h  ChatConverter.cpp  ChatImpl.cpp  ChatImpl.h  ChatStorage.h  ChatStorageLocal.cpp  ChatStorageLocal.h  Clipboard.cpp  Clipboard.h  DocumentProcessor.cpp  DocumentProcessor.h  Encryption.cpp  Encryption.h  HuggingFaceModelSource.cpp  HuggingFaceModelSource.h  LLMService.cpp  LLMService.h  LLMServiceDefs.cpp  LLMServiceDefs.h  LLMServices.cpp  LLMServices.h  LlamaCppService.cpp  LlamaCppService.h  MainWindow.cpp  MainWindow.h  ModelSource.cpp  ModelSource.h  ModelStoreDialog.cpp  ModelStoreDialog.h  OllamaModelSource.cpp  (+17 more)
Source/Application/qml/: APISelector.qml  AssetContent.qml  ChatDrawer.qml  ChatView.qml  InputArea.qml  LoadingSpinner.qml  Main.qml  MessageDelegate.qml  ModelSelector.qml  ModelStoreDialog.qml  OllamaModelStoreDialog.qml  SettingsDialog.qml
Source/Common/: CMakeLists.txt  ErrorSystem.cpp  ErrorSystem.h
Tests/: CMakeLists.txt  tst_chat.cpp  tst_llmservice.cpp  tst_llmservices.cpp
Tests/Application/: CMakeLists.txt  mock_llmservices.h  mock_services.cpp  mock_services.h  tst_chat.cpp  tst_encryption.cpp  tst_llamacpp.cpp  tst_llmservices.cpp  tst_ollama.cpp  tst_rag.cpp  tst_storagelocal.cpp
Tests/Application/qml/: tst_message_streaming.qml
Tests/Common/: CMakeLists.txt  tst_errorsystem.cpp
Tests/qml/: tst_chatview.qml
scripts/: build_android_gpu_cl.sh  build_native.sh  build_native_gpu_cl.sh  generate_docs.sh
